[package]
name = "bxa-rust-cdt"
version = "0.1.0"
authors = ["fospring <fospring@outlook.com>"]
edition = "2018"

[workspace]
members = [
    "pwasm-std",
    "pwasm-abi",
    "pwasm-abi-derive",
    "pwasm-ethereum",
    "examples/bxa",
]

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = "s"
