[workspace]
members = [
    "bxa-std",
    "bxa-abi",
    "bxa-api",
    "bxa-abi-derive",
    "bxa-gen-address",
    "examples/bxa",
    "examples/token",
    "examples/call-contract",
    "examples/called-contract",
    "examples/add",
]

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = "s"
