[package]
name = "token"
version = "0.1.0"
authors = ["fospring <fospring@outlook.com>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1.2.0", features = ["spin_no_std"] }

bxa-std = {path="../../bxa-std",version = "0.1"}
bxa-api = {path="../../bxa-api",version = "0.1"}
bxa-abi = {path="../../bxa-abi",version = "0.1"}
bxa-abi-derive = {path="../../bxa-abi-derive",version = "0.1"}

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
